# pytorch_lightning_hydra_template

./: .gitignore  Dockerfile  coverage.xml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yaml
configs/: config.yaml  eval.yaml  infer.yaml  main.yaml  test_configs.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  rich_progress_bar.yaml
configs/data/: birddata.yaml  dogbreed.yaml
configs/evaluation/: bird_eval.yaml  dogbreed_eval.yaml
configs/experiment/: bird_classifier_ex.yaml  dogbreed_ex.yaml
configs/inference/: bird_infer.yaml  dogbreed_infer.yaml
configs/logger/: csv.yaml  tensorboard.yaml
configs/model/: large.yaml  small.yaml  timm_classifier.yaml
configs/trainer/: cpu.yaml  gpu.yaml
dockerfiles/: Dockerfile.eval  Dockerfile.infer  Dockerfile.train
evaluations/bird_classification/: eval_results.json
evaluations/dogbreed_classification/: eval_results.json
outputs/2024-10-04/23-13-02/.hydra/: hydra.yaml
outputs/2024-10-04/23-15-39/.hydra/: config.yaml  hydra.yaml
outputs/2024-10-04/23-16-15/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/: eval.py  fdfdf.md  ffdfdfdf  infer.py  train.py
src/datamodules/: data_module.py  food_data_module.py
src/model_builder/: timm_classifier.py
src/utils/: custom_callbacks.py  custom_metrics.py  transformations.py
tests/: test_conf.py  test_infer.py  test_train.py
tests/datamodules/: test_bird_data_module.py  test_dogbreed_data_module.py
tests/models/: test_bird_classifier.py  test_dogbreed_classifier.py
(+11 files in other folders)
